notification service init
