# services/profile-service/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8084",
     "basePath": "/api/v1/profiles",
     "paths": {
-        "/profiles": {
+        "/create": {
             "post": {
                 "description": "Creates a new user profile with the provided details.",
                 "consumes": [
@@ -64,7 +64,55 @@
                 }
             }
         },
-        "/profiles/{userID}": {
+        "/{userID}": {
+            "get": {
+                "description": "Retrieves the user profile for a specified user ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Get user profile",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Profile fetched successfully",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Profile not found",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg.APIResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Updates the profile details for a given user ID.",
                 "consumes": [
@@ -140,56 +188,6 @@
                     },
                     "400": {
                         "description": "Invalid user ID",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/{userID}": {
-            "get": {
-                "description": "Retrieves the user profile for a specified user ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "profile"
-                ],
-                "summary": "Get user profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "userID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Profile fetched successfully",
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserProfileResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid user ID",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.APIResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Profile not found",
                         "schema": {
                             "$ref": "#/definitions/pkg.APIResponse"
                         }
